# stellar-mixer-risc0-prover

./: README.md  rust-toolchain.toml
artifacts/: transfer_guest.elf  transfer_guest_image_id_hex_le_words.txt  transfer_guest_image_id_words.txt  withdraw_guest.elf  withdraw_guest_image_id_hex_le_words.txt  withdraw_guest_image_id_words.txt
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/transfer_guest/: Cargo.toml
methods/transfer_guest/src/: main.rs
methods/withdraw_guest/: Cargo.toml
methods/withdraw_guest/src/: main.rs
