[package]
name = "transfer_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ["std"] }

rsa_risc0 = { package = "rsa", git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.9-risczero.0", default-features = false, features = ["std"] }

sha2_risc0 = { package = "sha2", git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0", features = ["oid"] }


parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
